--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 
 
 <a href="https://wa.me/919845714776?text=I%20would%20like%20to%20book%20Appliance%20repair%20services." class="whatsapp-btn" target="_blank" rel="noopener noreferrer">
-      <i class="fa-brands fa-whatsapp whatsapp-icon"></i>
+      <i class="fab fa-whatsapp whatsapp-icon"></i>
     </a>
 
      <div style="position: fixed; bottom: 0; left: 0; right: 0; z-index: 50; display: none;" id="callButton">
@@ -525,7 +525,7 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/parallax/parallax.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 
 
     <!-- Template Javascript -->
