--- a/index.html
+++ b/index.html
@@ -467,10 +467,10 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Our Services</h5>
-                    <a class="btn btn-link" href="https://wa.me/919845714776?text=I%20would%20like%20to%20book%20AC%20repair%20services.">AC Repair</a>
-                    <a class="btn btn-link" href="https://wa.me/919845714776?text=I%20would%20like%20to%20book%20Washing%20Machine%20repair%20services.">Washing Machine Repair</a>
-                    <a class="btn btn-link" href="https://wa.me/919845714776?text=I%20would%20like%20to%20book%20Oven%20repair%20services.">Oven Repair</a>
-                    <a class="btn btn-link" href="https://wa.me/919845714776?text=I%20would%20like%20to%20book%20Refrigerator%20repair%20services.">Refrigerator Repair</a>
+                    <a class="btn btn-link" href="https://wa.me/919845188786text=I%20would%20like%20to%20book%20AC%20repair%20services.">AC Repair</a>
+                    <a class="btn btn-link" href="https://wa.me/919845188786text=I%20would%20like%20to%20book%20Washing%20Machine%20repair%20services.">Washing Machine Repair</a>
+                    <a class="btn btn-link" href="https://wa.me/919845188786text=I%20would%20like%20to%20book%20Oven%20repair%20services.">Oven Repair</a>
+                    <a class="btn btn-link" href="https://wa.me/919845188786text=I%20would%20like%20to%20book%20Refrigerator%20repair%20services.">Refrigerator Repair</a>
                 </div>
             </div>
         </div>
@@ -490,7 +490,7 @@
     <!-- Footer End -->
 
 
-<a href="https://wa.me/919845714776?text=I%20would%20like%20to%20book%20Appliance%20repair%20services." class="whatsapp-btn" target="_blank" rel="noopener noreferrer">
+<a href="https://wa.me/919845188786text=I%20would%20like%20to%20book%20Appliance%20repair%20services." class="whatsapp-btn" target="_blank" rel="noopener noreferrer">
       <i class="fab fa-whatsapp whatsapp-icon"></i>
     </a>
 
